# ChangeLog for games-rpg/zsdx
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsdx/ChangeLog,v 1.9 2015/01/26 18:11:22 mr_bones_ Exp $

  26 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -files/zsdx-1.8.0-paths.patch, -zsdx-1.8.0-r1.ebuild:
  old

  27 Dec 2014; Agostino Sarubbo <ago@gentoo.org> zsdx-1.7.1-r1.ebuild:
  Stable for amd64, wrt bug #521092

  25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop maintainership

*zsdx-1.9.0 (24 Aug 2014)

  24 Aug 2014; Julian Ospald <hasufell@gentoo.org> +zsdx-1.9.0.ebuild:
  version bump

*zsdx-1.8.0-r1 (24 Aug 2014)
*zsdx-1.7.1-r1 (24 Aug 2014)

  24 Aug 2014; Julian Ospald <hasufell@gentoo.org> -zsdx-1.7.1.ebuild,
  +zsdx-1.7.1-r1.ebuild, -zsdx-1.8.0.ebuild, +zsdx-1.8.0-r1.ebuild:
  fix dependencies

*zsdx-1.8.0 (22 May 2014)

  22 May 2014; Julian Ospald <hasufell@gentoo.org>
  +files/zsdx-1.8.0-paths.patch, +zsdx-1.8.0.ebuild:
  version bump

  13 Apr 2014; Julian Ospald <hasufell@gentoo.org> zsdx-1.7.1.ebuild:
  update license info wrt #507412

  13 Apr 2014; Julian Ospald <hasufell@gentoo.org> zsdx-1.7.1.ebuild:
  set RESTRICT=mirror wrt #507412

*zsdx-1.7.1 (29 Jan 2014)

  29 Jan 2014; Julian Ospald <hasufell@gentoo.org> +zsdx-1.7.1.ebuild,
  +files/zsdx-1.7.1-paths.patch, +metadata.xml:
  initial import