@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/zsdx
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsdx/ChangeLog,v 1.9 2015/01/26 18:11:22 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsdx/ChangeLog,v 1.10 2015/04/26 16:28:15 pacho Exp $
+
+  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> zsdx-1.9.0.ebuild:
+  x86 stable wrt bug #547362
 
   26 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
   -files/zsdx-1.8.0-paths.patch, -zsdx-1.8.0-r1.ebuild:
